# pySpATS

./: CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
examples/: README.md  pyspats_sorghum_example.py  pyspats_sorghum_results.csv  r_spats_summary_clean.csv  sorghum_data.csv  spats_parity.ipynb
pyspats/: __init__.py  basis.py  control.py  core.py  datasets.py  ed_selected_inverse.py  families.py  plotting.py  psanova_basis.py  solver.py  utils.py  variogram.py
pyspats/reml/: __init__.py  assembly_adapter.py  optimizer.py  schur.py
pyspats/spatial/: __init__.py  block_operator.py  gram_kron.py  kron_utils.py  projection.py
tests/: __init__.py  comprehensive_validation.py  plot_validation.py  simple_validation.py  smoke_test.sh  test_basis.py  test_core.py  test_datasets.py  test_ed_selected_inverse.py  test_exact_mode_selection.py  test_heritability.py  test_kron_interaction.py  test_projection.py  test_psanova_hygiene.py  test_reml_ed_updates.py  test_schur_split.py  test_signoff.py  test_variogram.py
