[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pySpATS"
version = "0.1"
description = "Python implementation of Spatial Analysis of Field Trials with Splines (SpATS)"
readme = "README.md"
license = {text = "GPL-2.0"}
authors = [
    {name = "James Schnable Lab", email = "jschnable@unl.edu"},
]
maintainers = [
    {name = "James Schnable Lab", email = "jschnable@unl.edu"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["spatial analysis", "field trials", "splines", "agriculture", "plant breeding", "mixed models"]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0", 
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
    "scikit-learn>=1.0.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
spatial = ["scikit-sparse>=0.4.14"]

[project.urls]
"Homepage" = "https://github.com/schnablelab/python-spats"
"Bug Reports" = "https://github.com/schnablelab/python-spats/issues"
"Source" = "https://github.com/schnablelab/python-spats"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["pyspats*"]

[tool.setuptools.package-data]
pyspats = ["*.py"]